--- a/profiel.html
+++ b/profiel.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profiel lijst</title>
-    <link rel="stylesheet" type="text/css" href="styles/styling.css">
+    <link rel="stylesheet" type="text/css" href="styles/style2.css">
 </head>
 <body>
    <!--Begin header-->
     <header>
-       <nav>
-        <ul>
-            <li><a href="verhalenwebsite.html"><img id="eurostar" src="images/logo.svg" alt="letters van de eurostar"></a></li>
-            <li><a href="verhalenwebsite.html"><img id="eurostar2" src="images/logo-desktop.svg" alt="letters van de eurostar"></a></li>
-            <li><a href="profiel.html"><img id="profiel-actief" src="images/profiel.svg" alt="profiel icoon"></a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li>
+                    <a href="homepage-verhalenpag.html">
+                        <img src="images/logo.svg" alt="letters van de eurostar"></a>
+                </li>
+                <li>
+                    <a href="profiel.html">
+                        <img src="images/profielactief.svg" alt="profiel icoon">
+                    </a>
+                </li>
+            </ul>
         </nav>
     </header>
     <!--Eind header-->
@@ -41,9 +47,7 @@
   <form action="zoekresultaat.html">
             <fieldset>
                 <article>
-                    <img src="images/mop.svg" alt="artikel">
-
-
+                    <img id="mop" src ="images/mop.svg" alt="artikel">
                 </article>
                 <!--<ul>
                     <li><h2>Lengte</h2></li>
