--- a/profielgelezen.html
+++ b/profielgelezen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profiel gelezen</title>
-    <link rel="stylesheet" type="text/css" href="styles/styling.css">
+    <link rel="stylesheet" type="text/css" href="styles/style2.css">
 </head>
 <body>
     <!--Begin header-->
@@ -12,7 +12,7 @@
        <nav>
         <ul>
             <li><a href="verhalenwebsite.html"><img id="eurostar" src="images/eurostar.png" alt="letters van de eurostar"></a></li>
-            <li><a href="profiel.html"><img id="profiel" src="images/profiel.svg" alt="profiel icoon"></a></li>
+            <li><a href="profiel.html"><img id="profiel" src="images/profielactief.svg" alt="profiel icoon"></a></li>
         </ul>
         </nav>
     </header>
@@ -38,3 +38,12 @@
     <!--Eind footer-->
 </body>
 </html>
+
+
+
+
+
+
+https://www.webdeveloper.com/d/260527-how-can-i-delay-the-submission-of-a-form
+https://www.w3schools.com/js/tryit.asp?filename=tryjs_timing1
+https://www.w3schools.com/js/js_timing.asp
