--- a/zoekresultaat.html
+++ b/zoekresultaat.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="verhalenwebsite.html">
+                    <a href="homepage-verhalenpag.html">
                         <img src="images/logo.svg" alt="letters van de eurostar"></a>
                 </li>
                 <li>
@@ -28,7 +28,7 @@
     <main>
         <h2>Resultaten</h2>
 
-        <form action="zoekresultaat.html">
+        <form action="overzichtspagina.html">
 
 
             <fieldset>
@@ -52,19 +52,12 @@
                 <label for="normaal">Normaal</label>
             </fieldset>
 
-            <input type="submit" value="Zoeken">
-            <a href="verhalenwebsite.html"> Doe een gok</a>
-
-        </form>
-
-
         <!--Einde header-->
         <!--Begin section-->
-        <section id="resultaten">
+        <!--<section id="resultaten">
             <article>
                 <a class="titel" href="overzichtspagina.html">Mop</a>
-                <span>hoihoihoi</span>
-                <button id="change_text_button">Toevoegen</button>
+                <button id="change_text_button"></button>
             </article>
             <article>
                 <a class="titel" href="overzichtspagina.html">Haiku</a>
@@ -89,6 +82,7 @@
     </main>
     <!--Einde section-->
     <!--Begin footer-->
+    -->
     <footer>
 
     </footer>
