--- a/overzichtspagina.html
+++ b/overzichtspagina.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overzicht</title>
     <link rel="stylesheet" type="text/css" href="styles/style2.css">
 </head>
+
 <body>
     <!--Begin header-->
-       <!--Begin header-->
     <header>
         <nav>
             <ul>
                 <li>
-                    <a href="verhalenwebsite.html">
+                    <a href="homepage-verhalenpag.html">
                         <img src="images/logo.svg" alt="letters van de eurostar"></a>
                 </li>
                 <li>
@@ -25,13 +26,80 @@
         </nav>
     </header>
     <!--Eind header-->
-        <main>
-    </main>
-    <!--Eind header-->
-    <!--Begin footer-->
-        <footer>
+    <!--Begin section-->
+    <section class="overzicht">
+        <h2>Korte en rustige verhalen (6) </h2>
 
-        </footer>
-        <!--Einde footer-->
+        <div class="verder">
+            <a href="profiel.html">
+                <article>
+                    <h3>Lepra</h3>
+                    <p>Een vervallen verhaal</p>
+                    <img src="images/lepra2.svg" alt=mop>
+                    <img src="images/3sterretjes.svg" alt="3sterren">
+                    <button></button>
+                </article>
+            </a>
+        </div>
+        <div class="aanbev">
+            <a href="verhalenwebsite.html">
+                <article>
+                    <h3>Mop</h3>
+                    <p>Een grappig verhaal</p>
+                    <img src="images/mop2.svg" alt=mop>
+                    <img src="images/4sterretjes.svg" alt="3sterren">
+                    <button></button>
+                </article>
+            </a>
+            <a href="zoekresultaat.html">
+                <!-- In deze link zit een afbeelding: zie css-->
+                <article>
+                    <h3>Haiku</h3>
+                    <p>Een rustig verhaal</p>
+                    <img src="images/haiku2.svg" alt=mop>
+                    <img src="images/4sterretjes.svg" alt="4sterren">
+                    <button></button>
+                </article>
+            </a>
+        </div>
+        <div class="vormg">
+            <a href="zoekresultaat.html">
+                <article>
+                    <h3>Droom</h3>
+                    <p>Een bijzonder verhaal</p>
+                    <img src="images/droom2.svg" alt=mop>
+                    <img src="images/3sterretjes.svg" alt="3sterren">
+                    <button></button>
+                </article>
+            </a>
+            <a href="zoekresultaat.html">
+                <article>
+                    <h3>Hongerwinter</h3>
+                    <p>Een spannend verhaal</p>
+                    <img src="images/hongerwinter2.svg" alt=mop>
+                    <img src="images/3sterretjes.svg" alt="3sterren">
+                    <button></button>
+                </article>
+            </a>
+            <a href="zoekresultaat.html">
+                <article>
+                    <h3>De Cock</h3>
+                    <p>Een mysterieus verhaal</p>
+                    <img src="images/decock2.svg" alt=mop>
+                    <img src="images/3sterretjes.svg" alt="3sterren">
+                    <button></button>
+                </article>
+            </a>
+        </div>
+    </section>
+    <!--Eind section-->
+    <!--Begin footer-->
+    <footer>
+        <p>® Gemaakt door Stella Niewenhuis</p>
+    </footer>
+    <!--Eind footer-->
+    <!--JS koppeling-->
+    <script src="js/verhalen.js"></script>
 </body>
+
 </html>
